# nexus

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  nexus_executable_spec_v1.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/nexus-cli/: package.json
apps/nexus-cli/src/: index.ts  simple-chat.ts
apps/nexus-desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/nexus-desktop/scripts/: generate-icons.sh
apps/nexus-desktop/src/: App.tsx  index.css
apps/nexus-desktop/src-tauri/: Cargo.toml  bridge.mjs  tauri.conf.json
apps/nexus-desktop/src-tauri/capabilities/: default.json
apps/nexus-desktop/src-tauri/icons/: icon.icns
apps/nexus-desktop/src-tauri/src/: lib.rs  main.rs
apps/nexus-sdk/: package.json
apps/nexus-sdk/src/: index.ts  nexus.ts
apps/nexus-sdk/test/: nexus.test.ts
docs/: api-reference.md  architecture.md  plugin-development.md  user-guide.md  walkthrough.md
plugins/nexus-plugin-docker/: package-lock.json  package.json
plugins/nexus-plugin-docker/src/: index.ts
plugins/nexus-plugin-docker/test/: index.test.ts
plugins/nexus-plugin-git/: package.json
plugins/nexus-plugin-github/: package.json
plugins/nexus-plugin-mcp/: package-lock.json  package.json
plugins/nexus-plugin-test/: package.json
scripts/: benchmark.ts  build.ts  download-model.ts  generate-icons.sh  release.ts  test.ts
test/integration/: agent-loop.test.ts  compression.test.ts  config.test.ts
(+34 files in other folders)
